3822B1FI1/1_permutations_cxx/ionova_ekaterina/log.txt
/home/crazyproger/sandbox/oneapi-2026/3822B1FI1/1_permutations_cxx/ionova_ekaterina/permutations_cxx.cpp: In function ‘void Permutations(dictionary_t&)’:
/home/crazyproger/sandbox/oneapi-2026/3822B1FI1/1_permutations_cxx/ionova_ekaterina/permutations_cxx.cpp:8:14: error: ‘sort’ is not a member of ‘std’; did you mean ‘qsort’?
    8 |         std::sort(sorted_key.begin(), sorted_key.end());
      |              ^~~~
      |              qsort
/home/crazyproger/sandbox/oneapi-2026/3822B1FI1/1_permutations_cxx/ionova_ekaterina/permutations_cxx.cpp:16:14: error: ‘sort’ is not a member of ‘std’; did you mean ‘qsort’?
   16 |         std::sort(sorted_key.begin(), sorted_key.end());
      |              ^~~~
      |              qsort
/home/crazyproger/sandbox/oneapi-2026/3822B1FI1/1_permutations_cxx/ionova_ekaterina/permutations_cxx.cpp:27:14: error: ‘sort’ is not a member of ‘std’; did you mean ‘qsort’?
   27 |         std::sort(result_vec.begin(), result_vec.end(), std::greater<std::string>());
      |              ^~~~
      |              qsort
